# fastAPI_Zero

./: .gitignore  pyproject.toml
fast_zero/: app.py  home.py  schemas.py
tests/: test_app.py  test_home.py
